name:                flock-pieces-fglang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/michaeljklein/flock-pieces-fglang#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Klein
maintainer:          lambdamichael@gmail.com
copyright:           2016 Michael Klein
category:            Command Line
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Data.Flip
                     , Data.Functor.Turn
                     , Data.Functor.Join
                     , Data.HashSet.Utils
                     , Data.Hashable.Orphans
                     , Data.Tuple.Utils
                     , Scratch
                     , Scratch.FGLang
  build-depends:       base >= 4.9 && < 5
                     , QuickCheck
                     , bifunctors
                     , checkers
                     , comonad
                     , containers
                     , contravariant
                     , deepseq
                     , hashable
                     , profunctors
                     , random
                     , void
                     , unordered-containers
  default-language:    Haskell2010


executable fglang-demo
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , flock-pieces-fglang
                     , directory
                     , containers
  default-language:    Haskell2010


test-suite flock-pieces-fglang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , QuickCheck
                     , flock-pieces-fglang
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


benchmark flock-pieces-fglang-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , criterion
                     , flock-pieces-fglang
  ghc-options:         -Wall -O2
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/michaeljklein/flock-pieces-fglang
